Fix Vertical Jump of hours numbers

--- a/src/components/tables/dailyScheduleTable/DailyTable/DailyTable.module.css
+++ b/src/components/tables/dailyScheduleTable/DailyTable/DailyTable.module.css
@@ -79,10 +79,10 @@
     right: 0;
     z-index: 20;
     background-color: var(--table-gray-color);
-    vertical-align: middle;
+    vertical-align: top;
     height: var(--table-daily-cell-height);
     box-sizing: border-box;
-    padding: 0;
+    padding: 40px 0 0 0;
     width: 44px;
     min-width: 44px;
     border-radius: 0;
